--- a/views/crm_case_form_view_oppor_pr_access.xml
+++ b/views/crm_case_form_view_oppor_pr_access.xml
@@ -8,8 +8,8 @@
     <field name="groups_id" eval="[(6, 0, [ref('manarat_school.group_pr') ])]"/>
     <field name="arch" type="xml">
         <field name="state" position="attributes">
-            <attribute name="readonly">0</attribute>
-			<attribute name="clickable">1</attribute>
+            <!--<attribute name="readonly">0</attribute>
+			<attribute name="clickable">1</attribute>-->
         </field>
     </field>
 	</record>
